--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 20 Nov 2004
+  Last Modified: 2 Dec 2004
   Number: 11
-  Version: 3
+  Version: 4
 
 =head1 Overview
 
@@ -51,7 +51,7 @@ does not imply globalness (unlike in Perl 5).
 The C<::*> namespace is not "main".  The default namespace for the main
 program is C<::*Main>.  (Putting C<module Main;> at the top of your program
 is redundant, except insofar as it tells Perl that the code is Perl 6 code
-and not Perl 5 code.)
+and not Perl 5 code.  A bare C<module;> defaults to C<Main>.)
 
 Module traits are set using C<is>:
 
@@ -67,7 +67,24 @@ Exportation is now done by trait declaration on the exportable item:
     sub baz is export(:MANDATORY)       {...}  #  (always exported)
     sub bop is export                   {...}  #  :ALL
     sub qux is export(:others)          {...}  #  :ALL, :others
-                                                                                
+
+=head1 Importation
+
+All imports are done by default into the current lexical scope (rather
+than the current package, as in Perl 5).
+
+    use Sense <common @horse>;
+
+You can be explicit about the desired scoping:
+
+    use Sense :my<common> :our<@horse> :state<$haslearnedsome>;
+
+That's pretty much equivalent to:
+
+    use Sense;
+    my &common ::= &Sense::common;
+    our @horse ::= @Sense::horse;
+    state $haslearnedsome ::= $Sense::haslearnedsome;
 
 =head1 Versioning
 
@@ -200,5 +217,4 @@ version number or other literal:
 
 it runs Perl 6 in "lax" mode, without strictures or warnings, since obvously
 a bare literal in a void context I<ought> to have produced a warning.
-(Invoking perl with C<-e> has the same effect.)
-
+(Invoking perl with C<-e6> has the same effect.)
