--- a/doc/trunk/design/syn/S13.pod
+++ b/doc/trunk/design/syn/S13.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 2 Nov 2004
-  Last Modified: 20 Nov 2004
+  Last Modified: 2 Dec 2004
   Number: 13
-  Version: 2
+  Version: 3
 
 =head1 Overview
 
@@ -59,9 +59,9 @@ sub or method.
 If you want to overload string concatenation for Arabic strings
 so you can handle various ligatures, you can say:
 
-    multi sub *infix:«~»(ArabicStr $s1, ArabicStr $s2) {...}
-    multi sub *infix:«~»(Str $s1, ArabicStr $s2) {...}
-    multi sub *infix:«~»(ArabicStr $s1, Str $s2) {...}
+    multi sub *infix:<~>(ArabicStr $s1, ArabicStr $s2) {...}
+    multi sub *infix:<~>(Str $s1, ArabicStr $s2) {...}
+    multi sub *infix:<~>(ArabicStr $s1, Str $s2) {...}
 
 Ordinary methods can be turned into multi methods within the class definition:
 
@@ -73,24 +73,24 @@ Ordinary methods can be turned into multi methods within the class definition:
 Likewise operators on your new type can appear in the class:
 
     class MyNum {
-	multi method prefix:«+» (MyNum $x) {...} # what we do in numeric context
-	multi method prefix:«~» (MyNum $x) {...} # what we do in string context
-	multi method prefix:«?» (MyNum $x) {...} # what we do in boolean context
+	multi method prefix:<+> (MyNum $x) {...} # what we do in numeric context
+	multi method prefix:<~> (MyNum $x) {...} # what we do in string context
+	multi method prefix:<?> (MyNum $x) {...} # what we do in boolean context
 	...
     }
 
 Binary operators may be declared as commutative:
 
-    multi sub infix:«+» (Us $us, Them $them) is commutative { myadd($us,$them) }
+    multi sub infix:<+> (Us $us, Them $them) is commutative { myadd($us,$them) }
 
 That's equivalent to:
 
-    multi sub infix:«+» (Us $us, Them $them) { myadd($us,$them) }
-    multi sub infix:«+» (Them $them, Us $us) { myadd($us,$them) }
+    multi sub infix:<+> (Us $us, Them $them) { myadd($us,$them) }
+    multi sub infix:<+> (Them $them, Us $us) { myadd($us,$them) }
 
 Note the lack of C<*> on those definitions.  That means this definition
 of addition is only in effect within the scope of the package in which
-C<infix:«+»> is defined.  Similar constraints apply to lexically scoped
+C<< infix:<+> >> is defined.  Similar constraints apply to lexically scoped
 multi subs.  Generally you want to put your multi subs into the C<*>
 space, however, so that they work everywhere.
 
@@ -99,10 +99,10 @@ it was easy to alias several different operators to the same service
 routine.  This can easily be handled with Perl 6's aliasing:
 
     multi sub unimpl (MyFoo $x) { upchuck(); }
-    &infix:«+» ::= &unimpl;
-    &infix:«-» ::= &unimpl;
-    &infix:«*» ::= &unimpl;
-    &infix:«/» ::= &unimpl;
+    &infix:<+> ::= &unimpl;
+    &infix:<-> ::= &unimpl;
+    &infix:<*> ::= &unimpl;
+    &infix:</> ::= &unimpl;
 
 =head1 Fallbacks
 
@@ -120,11 +120,11 @@ which may be used by various shallow operators.  Any deep multi
 declarations will be "amplified" into all the shallow operators that
 can be logically based on it.  If you say:
 
-    multi sub infix:«%» (Us $us, Them $them) is deep { mymod($us,$them) }
+    multi sub infix:<%> (Us $us, Them $them) is deep { mymod($us,$them) }
 
 then
 
-    multi sub infix:«%=» (Us $us, Them $them) { $us = $us % $them }
+    multi sub infix:<%=> (Us $us, Them $them) { $us = $us % $them }
 
 is also generated for you (unless you define it yourself).
 The mappings of magical names to sub definitions is controlled by the
