Minor POD format issues.
git-svn-id: http://svn.pugscode.org/pugs@23171 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -740,7 +740,7 @@ The double-underscore forms are going away:
 The C<=begin END> pod stream is special in that it assumes there's
 no corresponding C<=end END> before end of file.  The C<DATA>
 stream is no longer special--any POD stream in the current file
-can be accessed via a filehandle, named as C<< %=POD<DATA> >> and such.
+can be accessed via a filehandle, named as C<< %=POD{'DATA'} >> and such.
 Alternately, you can treat a pod stream as a scalar via C<$=DATA>
 or as an array via C<@=DATA>.  Presumably a module could read all
 its COMMENT blocks from C<@=COMMENT>, for instance.  Each chunk of
