--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -180,19 +180,19 @@ to read a file a line at a time:
 
 you should use a C<for> instead:
 
-    for *$*IN -> $line {...}
+    for $*IN.lines -> $line {...}
 
 This has the added benefit of limiting the scope of the C<$line>
 parameter to the block it's bound to.  (The C<while>'s declaration of
 C<$line> continues to be visible past the end of the block.  Remember,
 no implicit block scopes.)  It is possible to write
 
-    while *$*IN -> $line {...}
+    while $*IN.lines -> $line {...}
 
 but you have to be careful that the object being evaluated for truth
 can also behave as a line after behaving as a boolean.  If you write:
 
-    while ?<$*IN> -> $line {...}
+    while ?$*IN.lines -> $line {...}
 
 then C<$line> will only ever contain 0 or 1, because that's what ? returns.
 
@@ -203,7 +203,11 @@ Note also that Perl 5's special rule causing
 to automatically assign to C<$_> is not carried over to Perl 6.  That's
 should now be written:
 
-    for * {...}
+    for .lines {...}
+
+which is short for
+
+    for $*ARGS.lines {...}
 
 (If you write it with C<while> you'll get a warning.)
 
