There are a lot of missing *= (for some * :-) operators, so I just put in a etc. and hoped that people would figure it out.
git-svn-id: http://svn.pugscode.org/pugs@23183 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -335,7 +335,7 @@ Perl 6 has 22 precedence levels (fewer than Perl 5):
     tight and		&&
     tight or		|| ^^ //
     ternary		?? ::
-    assignment		= := ::= += -= **= xx=
+    assignment		= := ::= += -= **= xx= etc.
     list item separator	, ¥
     list op (rightward)	<== print push any all true not etc.
     pipe forward	==>
