Added maintainer, date, and version information.
git-svn-id: http://svn.pugscode.org/pugs@23188 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S17.pod
+++ b/doc/trunk/design/syn/S17.pod
@@ -8,11 +8,11 @@ Synopsis 17: Threads
 
 =head1 VERSION
 
-  Maintainer: 
-  Date: 
-  Last Modified:
-  Number:
-  Version:
+  Maintainer: unclaimed
+  Date: 13 Jun 2005
+  Last Modified: 13 Jun 2005
+  Number: 0
+  Version: 1
 
 =head1 Overview
 
