* Add "Complex" boxed type to S06 to keep in sync with S09, as acknowledged by Larry in http://www.nntp.perl.org/group/perl.perl6.language/23490
git-svn-id: http://svn.pugscode.org/pugs@23198 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -643,6 +643,7 @@ These are the standard type names in Perl 6 (at least this week):
     Int         Perl integer (allows traits, aliasing, etc.)
     Str         Perl string (Unicode semantics)
     Num         Perl number
+    Complex     Perl complex number
     Ref         Perl reference
     Bool        Perl boolean
     Array       Perl array
